# statistical-arbitrage-v3

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  PROJECT_PLAN.md  README.md  pyproject.toml  run_api.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-routing-navigation-scaffold/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-UI-SPEC.md  01-VALIDATION.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
api/: main.py  schemas.py
api/routers/: academy_scan.py  analysis.py  backtest.py  health.py  optimization.py  pairs.py  research.py  scanner.py  trading.py
config/: .env.example  settings.py
frontend/: package-lock.json  package.json
scripts/: _ohlcv_common.py  backfill_ohlcv.py  update_ohlcv.py
src/statistical_arbitrage/: __init__.py
tests/: test_api.py  test_backtest_api.py  test_backtest_engine.py  test_optimization.py  test_optimization_api.py  test_overfitting.py  test_research_api.py  test_research_modules.py  test_research_s03.py  test_rolling_cointegration.py  test_scanner_api.py  test_trading_api.py  test_walkforward.py
tests/live_trading/: conftest.py  test_integration.py  test_kill_switch.py  test_live_engine.py  test_order_executor.py  test_persistence.py  test_reconciliation.py  test_risk_manager.py  test_system_integration.py  test_telegram.py
(+126 files in other folders)
